2017-02-22	"An unbreakable toy is useful for breaking other toys."  (2)

		include/innocent-pear/lolwut.h :
		- lolwut_impl<...> can now do pointers to const items

		share/innocent-pear/doge-01.cc :
		- ifunc hack now has a thin layer of pointer scrambling...

2017-02-10	"An unbreakable toy is useful for breaking other toys."

		README.md :
		- now explicitly states that testing is done on Linux

2017-02-06	Better handling of GNU indirect functions.  (2)

		share/innocent-pear/doge-99.cc ,
		share/innocent-pear/doge-n.ld ,
		share/innocent-pear/doge-i.h :
		- .rel{, a}.plt -> .rel{, a}.bss -- ELF on ARM places
		  .rel{, a}.iplt _before_ .rel{, a}.plt but after .rel{, a}
		  .bss

2017-02-05	"Harp not on that string."

		share/innocent-pear/doge-n.ld :
		- tweaked to use DEFINED(.)
		- .init now slurps up any stray definitions of .rel{, a}.
		  {, i}plt sections not used by the default linker script

		share/innocent-pear/doge-01.cc :
		- in debug mode, now detects if __wrap___pthread_initialize_
		  minimal() is called more than once

		share/innocent-pear/doge-07.cc :
		- some debugging output for ifunc resolving

		share/innocent-pear/doge-99.cc ,
		share/innocent-pear/doge-i.h :
		- now using a different way to define rel{, a}_iplt_start

		bin/innocent-pear-front-end.tcc :
		- scrapped -lstdc++ -latomic -lc -lgcc -lgcc_eh for dynamic
		  linking -- it is causing problems with -static-libstdc++

		GNUmakefile :
		- upon an error from a test binary, now dumps entire binary

2017-02-04	Better handling of GNU indirect functions.

		share/innocent-pear/doge-01.cc ,
		share/innocent-pear/doge-07.cc ,
		share/innocent-pear/doge-i.h ,
		share/innocent-pear/doge-n.ld :
		- implemented .rel{,a}.iplt + ::__pthread_initialize_minimal()
		  hack

		share/innocent-pear/doge-99.cc :
		- tweaked

		bin/innocent-pear-front-end.tcc :
		- now tries to rope in -lstdc++, -latomic, -lc, -lgcc, and/or
		  -lgcc_eh even if not linking statically