@@ -1,3 +1,8 @@
+2017-02-25	"An unbreakable toy is useful for breaking other toys."  (3)
+
+		share/innocent-pear/doge-i.h :
+		- now frobs Elfxx_Rel{, a}::r_info values before testing them
+
 2017-02-22	"An unbreakable toy is useful for breaking other toys."  (2)
 
 		include/innocent-pear/lolwut.h :
